# sharesp241

./: .shsh  README.md  index.md
KingGedorah/W01/: djbx33a.c  djbx33a.sh  program
KingGedorah/W02/: progress.txt
KingGedorah/W03/: progress.txt
KingGedorah/W03/fuse-tutorial-2018-02-04/: Makefile  config.status
KingGedorah/W03/fuse-tutorial-2018-02-04/html/: Makefile
KingGedorah/W03/fuse-tutorial-2018-02-04/src/: Makefile  bbfs
KingGedorah/W03/helloworld-fuse/: hello.c
KingGedorah/W04/: 2106752104-getopt.c  Makefile  progress.txt
KingGedorah/W05/: build.sh  configure.ac  progress.txt  share.c  share.h
NeoZap/W01/: Makefile  djbx33a  djbx33a.c  djbx33a.sh
NeoZap/W02/: progress.txt
NeoZap/W03/: progress.txt
NeoZap/W03/fuse-tutorial-2018-02-04/: Makefile  Makefile.in  config.status
NeoZap/W03/fuse-tutorial-2018-02-04/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
NeoZap/W03/fuse-tutorial-2018-02-04/html/: Makefile  Makefile.in
NeoZap/W03/fuse-tutorial-2018-02-04/src/: Makefile  Makefile.in  bbfs  config.h.in
NeoZap/W03/helloworld-fuse/: hello.c
NeoZap/W04/: 2106630063-getopt.c  Makefile  input.txt  new_input.txt  output.txt  progress.txt
NeoZap/W05/: Makefile  Makefile.am  Makefile.in  build.sh  config.h  config.status  configure  configure.ac  configure~  prog1  prog2  progress.txt  share.c  share.h
NeoZap/W05/.deps/: prog1.Po  share.Po
NeoZap/W05/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.2
Synchx00/W01/: Makefile  djbx33a.c  djbx33a.sh
Synchx00/W02/: progress.txt
Synchx00/W03/: progress.txt
Synchx00/W03/fuse-tutorial-2018-02-04/: Makefile  config.status
Synchx00/W03/fuse-tutorial-2018-02-04/html/: Makefile
Synchx00/W03/fuse-tutorial-2018-02-04/src/: Makefile  bbfs  log.c
Synchx00/W03/helloworld-fuse/: hello.c
Synchx00/W04/: 2106751455-getopt  2106751455-getopt.c  Makefile  progress.txt
Synchx00/W05/: Makefile.am  build.sh  configure.ac  progress.txt  share.c  share.h
aghoz-i/W01/: Makefile  djbx33a.c  djbx33a.sh
aghoz-i/W02/: progress.txt
aghoz-i/W03/: progress.txt
aghoz-i/W03/fuse-tutorial-2018-02-04/: Makefile  config.status
aghoz-i/W03/fuse-tutorial-2018-02-04/html/: Makefile
aghoz-i/W03/fuse-tutorial-2018-02-04/src/: Makefile  bbfs  log.c
aghoz-i/W03/helloworld-fuse/: hello.c
aghoz-i/W04/: 2006473932-getopt.c  Makefile  input.txt  output.txt  progress.txt
aghoz-i/W05/: Makefile.am  build.sh  configure.ac  share.c  share.h
cbkadal/W03/: progress.txt
cbkadal/W03/cbkadal/: Makefile  cbkadal.c
cbkadal/W03/fuse-tutorial-2018-02-04/: Makefile  config.status
cbkadal/W03/fuse-tutorial-2018-02-04/html/: Makefile
cbkadal/W03/helloworld-fuse/: hello
cbkadal/W04/: Makefile  progress.txt
cbkadal/W05/: 000-README.txt  Makefile.am  build.sh  configure.ac  prog1.c  prog2.c  progress.txt  share.c  share.h
clvdyo/W01/: djbx33a.c  djbx33a.sh
clvdyo/W03/: index.html  progress.txt
clvdyo/W03/helloworld-fuse/: hello.c
clvdyo/W04/: 2306335575-getopt  2306335575-getopt.c  Makefile  input.txt  output.txt  progress.txt
clvdyo/W04/W04/: Makefile
clvdyo/W05/: Makefile.am  build.sh  configure.ac  prog1.c  progress.txt  share.c  share.h
clvdyo/W05/.deps/: prog2.Po
danktapir/W01/: Makefile  djbx33a  djbx33a.c  djbx33a.sh  string.txt
danktapir/W02/: progress.txt
danktapir/W03/: progress.txt
danktapir/W03/fuse-tutorial-2018-02-04/: Makefile  config.status
danktapir/W03/helloworld-fuse/: hello.c
danktapir/W04/: 2006596106-getopt.c  Makefile  input.txt  progress.txt
danktapir/W05/: 000-README.txt  Makefile.am  configure  configure.ac  prog1.c  progress.txt  share.c  share.h
danktapir/W05/autom4te.cache/: output.0  requests  traces.0
fawzakin/W01/: Makefile  djbx33a  djbx33a.c  djbx33a.sh
fawzakin/W02/: progress.txt
fawzakin/W03/: progress.txt
fawzakin/W03/fuse-tutorial-2018-02-04/: Makefile  config.status
fawzakin/W03/helloworld-fuse/: README.md  hello.c
fawzakin/W04/: 2006595910-getopt.c  Makefile  input.txt  progress.txt
fawzakin/W05/: 000-README.txt  Makefile.am  README.txt  compile.sh  configure.ac  prog2.c  share.c  share.h
fawzakin/W05/.deps/: share.Po
ivanoxx/W01/: djbx33a.c  djbx33a.sh
ivanoxx/W02/: progress.txt
ivanoxx/W03/: progress.txt
ivanoxx/W03/fuse-tutorial-2018-02-04/: Makefile  config.status
ivanoxx/W03/helloworld-fuse/: hello  hello.c
ivanoxx/W04/: 2106701564-getopt.c  Makefile
ivanoxx/W05/: Makefile.am  Makefile.in  configure  configure.ac  configure~  progress.txt  share.c  share.h
ivanoxx/W05/.deps/: share.Po
ivanoxx/W05/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
mm0ne/W01/: Makefile  djbx33a  djbx33a.c  djbx33a.sh
mm0ne/W02/: progress.txt
mm0ne/W03/: progress.txt
mm0ne/W03/fuse-tutorial-2018-02-04/: Makefile  config.status
mm0ne/W03/helloworld-fuse/: hello  hello.c
mm0ne/W04/: 2106705764-getopt  2106705764-getopt.c  Makefile  input.txt  progress.txt
mm0ne/W05/: Makefile.am  build.sh  configure  configure.ac  configure~  prog1.c  progress.txt  share.c  share.h
mm0ne/W05/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.2
syifaafra/ATTENDANCE/W01/: djbx33a.c  djbx33a.sh
syifaafra/ATTENDANCE/W02/: progress.txt
syifaafra/ATTENDANCE/W03/: progress.txt
syifaafra/W01/: dbjx33a
syifaafra/W03/: index.html
syifaafra/W03/fuse-tutorial-2018-02-04/: Makefile  config.status
syifaafra/W04/: 2106707151-geopt.c  2106707151-getopt  2106707151-getopt.c  Makefile  NPM-getopt.c  README.txt  input.txt  output.txt  progress.txt
syifaafra/W05/: Makefile.am  configure.ac  prog1  prog2  prog2.c  progress.txt  share.c  share.h
virdianhrn/W01/: djbx33a.c  djbx33a.sh
virdianhrn/W02/: progress.txt
virdianhrn/W03/: progress.txt
virdianhrn/W03/helloworld-fuse/: hello.c
virdianhrn/W04/: 2006595766-getopt  2006595766-getopt.c  Makefile  progress.txt
virdianhrn/W05/: .shsh  Makefile.am  configure.ac  progress.txt  share.c  share.h
yforku/W01/: Makefile  djbx33a.c  djbx33a.sh
yforku/W02/: progress.txt
(+31 files in other folders)
