dnl REV03: Thu 14 Mar 2024 14:25
dnl REV02: Wed 13 Mar 2024 10:00
dnl START: Sat 11 Mar 2023 22:00
dnl Please complete this file.

AC_INIT([W05], [1.0], [clvdyo@localhost])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
