dnl REV02: Wed 13 Mar 2024 10:00
dnl START: Sat 11 Mar 2023 22:00
dnl Please complete this file.
AC_INIT([prog], [1.0], [fawzakin@fawzakin])

dnl I added this since I tried it with my host that runs Arch Linux
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE

AC_PROG_CC

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
